route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-debug
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    haproxy.router.openshift.io/set-forwarded-headers: replace
spec:
  host: example.com
  path: /nginx-debug
  to:
    kind: Service
    name: nginx-debug
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
